bug fixes & AI adjustments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.othello">
+    package="com.example.othello"
+    android:installLocation="auto">
 
     <application
         android:icon="@drawable/logo"
